--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div id="display">
         <img src="legend.png" id="preview1">
         <p id="maincaption">A project detailing the colors used in the news throughout the year.Through extracting the main colors of pictures for articles on New York Times, provide readers with a comprehensive palette.In this way, the text based variable becomes a color, another kind of qualitative data.</p>
-        <p id="caption">Hover to see the article</p>
+        <p id="title">>>>Hmmm, Interesting</p>
+        <p id="caption">>>>>Hover over color blocks to read the article</p>
         <img src="sample.png" id="preview">
     </div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
