--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div id="try">
         <h1 class='top'>Still read through texts?</h1>
-        <h1 class='top1'>A year of New York Times at A Glance</h1>
+        <h1 class='top1'>A Year of New York Times at A Glance</h1>
     </div>
     <div id="display">
         <img src="legend.png" id="preview1">
